# src/controllers-layer/grpc-layer/index.js
@@ -2,6 +2,7 @@ const sessionRouter = require("./session-router");
 module.exports = {
   registerUser: require("./register-user"),
   updateUser: require("./update-user"),
+  deleteUser: require("./delete-user"),
   updateUserrole: require("./update-userrole"),
   updatePassword: require("./update-password"),
   getUser: require("./get-user"),
